ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dev"

spec:
  ingressClassName: nginx
  rules:
  - host: capstone.better-great.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            port: 
              number: 80

  tls:
    - hosts:
        - capstone.better-great.me
      secretName: sock-shop-frontend-tls
